Add password place

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
                     <div class="gs">
                         <h1> Sign In  </h1>
                     
-                        <label> Name </label>
-                            <input type="text" name ="name" placeholder="Write your good name please">
+                        <label> Username </label>
+                            <input type="text" name ="name" placeholder="Type your username please">
+                            <br>
+                            <label> Password </label>
+                            <input type="password" name ="Passwor" placeholder="Type your password please">
                             <br>
                         <label> Email </label>
                             <input type="email" name ="email" placeholder="Write your email please">
@@ -30,7 +33,6 @@
                             </select>
                             <br>
                         <label> Descripcion</label>
-                            
                             <textarea name="Descripcion" placeholder="Write some reasons, why you want to decided open your A/C"></textarea>
                             <br>
                         <input type="submit" name ="submit" value="submit">
