change index name

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
             <form class="my_from">
                 <div class="auto_size">
                     <div class="gs">
-                        <h1> Sign In  </h1>
+                        <h1> Register for Foskir Math  </h1>
                     
                         <label> Username </label>
                             <input type="text" name ="name" placeholder="Type your username please">
                             <br>
                             <label> Password </label>
-                            <input type="password" name ="Passwor" placeholder="Type your password please">
+                            <input type="password" name ="password" placeholder="Type your password please">
                             <br>
                         <label> Email </label>
                             <input type="email" name ="email" placeholder="Write your email please">
@@ -35,7 +35,7 @@
                         <label> Descripcion</label>
                             <textarea name="Descripcion" placeholder="Write some reasons, why you want to decided open your A/C"></textarea>
                             <br>
-                        <input type="submit" name ="submit" value="submit">
+                        <input type="submit" name ="submit" value="Aprilfool">
                     </div>
                 </div>
              </form>    
