--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
         <body>
+            <script src="java.js"></script>
             <form class="my_from">
                 <div class="auto_size">
                     <div class="gs">
